[package]
name = "my-domain-server"
version = "0.1.0"
edition = "2021"
description = "Auth'd device registry for my-domain: users log in, register their devices, and look up their other devices' endpoints (MongoDB-backed)."

[[bin]]
name = "my-domain-server"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
futures = "0.3"
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
